<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/screenbg" />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/appfont"
            android:minWidth="90dp"
            android:text="@string/host_url_title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/host_url_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@font/appfont"
            android:hint="Your host url or empty"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="Your Host URL or Empty for demo default" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/appfont"
            android:minWidth="90dp"
            android:text="@string/carrier_id_title"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/carrier_id_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="@font/appfont"
            android:hint="Your carrier id or empty"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:text="Your carrier id or Empty for demo default" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center">

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="180dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/btnbox"
            android:fontFamily="@font/headerfont"
            android:gravity="center"
            android:onClick="onLoginBtnClick"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>